--- a/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar nova Instituição</a>
 </p>
 <table class="table">
     <thead>
