Alterando as extenções das imanges e adicionando novas imagens

--- a/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
@@ -17,8 +17,8 @@
 <body>
     <nav class="navbar fixed-top navbar-light bg-primary">
         <a class="navbar-brand" href="#">
-            <img src="~/images/casa-do-codigo_2x.png" width="30" height="30" alt="">
-            ASP.NET Core MVC
+            <img src="~/images/casa-do-codigo_2x.png" align="left" width="30" height="30" alt="">&nbsp;
+            <strong style="color:black">ASP.NET Core MVC</strong>
         </a>
     </nav>
 
