--- a/EnsinoSuperior/EnsinoSuperior/Views/Home/Index.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="~/images/aspnetcore.jpg" alt="ASP NET Core MVC">
+                    <img align="left" class="d-block img-fluid" src="~/images/aspnetcore.png" alt="ASP NET Core MVC">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="~/images/casadocodigo.png" alt="Casa do Código">
+                    <img align="middle" class="d-block img-fluid" src="~/images/casadocodigo.png" alt="Casa do Código">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="~/images/everton.jpg" width="600" alt="Everton Coimbra de Araújo">
+                    <img align="right" class="d-block img-fluid" src="~/images/tolist.jpg" width="200" alt="Everton Coimbra de Araújo">
                 </div>
             </div>
         </div>
