Colocando o layout nas paginas

--- a/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<EnsinoSuperior.Models.Instituicao>
 
 @{
-    Layout = null;
+    Layout = "_LayoutIES";
 }
 
 <!DOCTYPE html>
@@ -12,44 +12,45 @@
     <title>Index</title>
 </head>
 <body>
-<p>
-    <a asp-action="Create">Criar nova Instituição</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.InstituicaoID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Endereco)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.InstituicaoID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Endereco)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id=item.InstituicaoID }) |
-                @Html.ActionLink("Detalhes", "Details", new { id=item.InstituicaoID }) |
-                @Html.ActionLink("Deletar", "Delete", new { id=item.InstituicaoID })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p>
+        <a asp-action="Create">Criar nova Instituição</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.InstituicaoID)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Endereco)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td align="center">
+                        @Html.DisplayFor(modelItem => item.InstituicaoID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Endereco)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Editar", "Edit", new { id = item.InstituicaoID }) |
+                        @Html.ActionLink("Detalhes", "Details", new { id = item.InstituicaoID }) |
+                        @Html.ActionLink("Deletar", "Delete", new { id = item.InstituicaoID })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </body>
 </html>
