--- a/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Create.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EnsinoSuperior.Models.Instituicao
 
 @{
-    Layout = null;
+    Layout = "_LayoutIES";
 }
 
 <!DOCTYPE html>
@@ -45,7 +45,7 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
+@section ScriptPage {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 </body>
