--- a/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
@@ -32,11 +32,11 @@
         <div class="row">
             <div class="col-2">
                 <nav class="nav flex-column bg-transparent">
-                    <a class="nav-link active" href="#">
+                    <a class="nav-item nav-link" asp-controller="Instituicao" asp-action="Index">
                         <img src="~/images/university.png" width="30" height="30" alt="">
                         Instituições
                     </a>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" asp-controller="Departamento" asp-action="Index">
                         <img src="~/images/department.png" width="30" height="30" alt="">
                         Departamentos
                     </a>
