--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Edit.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Edit.cshtml
@@ -36,7 +36,7 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
+@section ScriptPage {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 </body>
