--- a/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
@@ -22,13 +22,8 @@
         </a>
     </nav>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">&nbsp;</div>
-            <div class="col-12">&nbsp;</div>
-            <div class="col-12">&nbsp;</div>
-            <div class="col-12">&nbsp;</div>
-        </div>
+    <div class="container">
+        
         <div class="row">
             <div class="col-2">
                 <nav class="nav flex-column bg-transparent">
