--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Create.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Create.cshtml
@@ -25,6 +25,10 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="InstituicaoID" class="control-label"></label>
+                <select asp-for="InstituicaoID" class="form-control" asp-items="@(new SelectList(@ViewBag.Instituicoes, "InstituicaoID", "Nome"))"></select>
+            </div>
+            <div class="form-group text-center h3">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
