--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Edit.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Edit.cshtml
@@ -26,6 +26,10 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="InstituicaoID" class="control-label"></label>
+                <select asp-for="InstituicaoID" class="form-control" asp-items=@ViewBag.Instituicoes></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
