--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Details.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Details.cshtml
@@ -23,6 +23,12 @@
         <dd>
             @Html.DisplayFor(model => model.Nome)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Instituicao.Nome)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Instituicao.Nome)
+        </dd>
     </dl>
 </div>
 <div>
