--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Delete.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Delete.cshtml
@@ -24,6 +24,12 @@
         <dd>
             @Html.DisplayFor(model => model.Nome)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Instituicao.Nome)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Instituicao.Nome)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
