Fazendo referências ao Modelo correto

--- a/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/_ComDepartamentos.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/_ComDepartamentos.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EnsinoSuperior.Models.Departamento>
+﻿@model IEnumerable<Modelo.Cadastros.Departamento>
 
 <div class="panel panel-primary">
     <div class="panel-heading">
