--- a/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Index.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Departamento/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EnsinoSuperior.Models.Departamento>
+﻿@model IEnumerable<Modelo.Cadastros.Departamento>
 
 @{
     Layout = "_LayoutIES";
