--- a/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Instituicao/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EnsinoSuperior.Models.Instituicao>
+﻿@model IEnumerable<Modelo.Cadastros.Instituicao>
 
 @{
     Layout = "_LayoutIES";
