--- a/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
@@ -35,6 +35,10 @@
                         <img src="~/images/department.png" width="30" height="30" alt="">
                         Departamentos
                     </a>
+                    <a class="nav-item nav-link" asp-controller="Academico" asp-action="Index">
+                        <img src="~/images/academic.jpg" width="30" height="30" alt="">
+                        Acadêmicos
+                    </a>
                 </nav>
             </div>
             <div class="col-10">
