Aplicando a mensgaem do usuario logado, assim como a opção de logout

--- a/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Shared/_LayoutIES.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Identity.SignInManager<EnsinoSuperior.Models.Infra.UsuarioDaAplicacao> SignInManager
+@inject Microsoft.AspNetCore.Identity.UserManager<EnsinoSuperior.Models.Infra.UsuarioDaAplicacao> UserManager
+
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -23,7 +26,23 @@
     </nav>
 
     <div class="container">
-        
+
+        <div class="row" style="text-align:right;">
+            <div class="col-6"></div>
+            <div class="col-6">
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <div>Olá @UserManager.GetUserName(User), seja bem-vindo(a) / @Html.ActionLink("Logout", "Sair", "Infra", new { area = "" })</div>
+                }
+                else
+                {
+                    <a class="nav-item nav-link" asp-area="" asp-controller="Infra" asp-action="Acessar">
+                        Informar usuário/senha para acessar
+                    </a>
+                }
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-2">
                 <nav class="nav flex-column bg-transparent">
