--- a/EnsinoSuperior/EnsinoSuperior/Views/Academico/Edit.cshtml
+++ b/EnsinoSuperior/EnsinoSuperior/Views/Academico/Edit.cshtml
@@ -28,6 +28,11 @@
                 <label class="control-label">Foto</label>
                 <input type="file" name="foto" class="form-control" />
             </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="chkRemoverFoto" value="Sim">Remover Foto
+                </label>
+            </div>
             <div class="form-group text-center h3">
                 <input type="submit" value="Atualizar Acadêmico" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-warning">Retornar à listagem de acadêmicos</a>
